--- a/index.html
+++ b/index.html
@@ -1488,6 +1488,28 @@
     await loadWelcomeAd();
   })();
 </script>
+<section style="max-width:900px;margin:40px auto 20px;padding:20px;color:#fff;">
+  <h2>ما هو متجر فن التكنولوجيا الحديث؟</h2>
+  <p>
+    فن التكنولوجيا الحديث هو متجر كورسات وتطبيقات وبرامج VIP، يقدّم محتوى تقني وتعليمي
+    جاهز للاستخدام. من خلال حساب واحد يمكنك الوصول إلى الدورات، التطبيقات المدفوعة،
+    الأدوات التعليمية، والملفات الاحترافية في مجالات البرمجة، التصميم، الذكاء الاصطناعي،
+    IPTV، المونتاج، والهاتف.
+  </p>
+  <p>
+    نعمل على توفير محتوى موثوق بأسعار بسيطة مع دعم فني مستمر، حتى تستفيد من كل أداة أو
+    كورس تشتريه من المتجر بسهولة وأمان.
+  </p>
+</section>
 
+<section style="max-width:900px;margin:0 auto 40px;padding:20px;color:#fff;">
+  <h2>مميزات الاشتراك في حساب VIP</h2>
+  <ul>
+    <li>الوصول إلى جميع الحقول المغلقة داخل الكورسات والبرامج.</li>
+    <li>تحديثات مستمرة على التطبيقات والملفات بدون رسوم إضافية.</li>
+    <li>دعم فني عبر واتساب لحل أي مشكلة تواجهك.</li>
+    <li>إضافة محتوى جديد بشكل دوري في مجالات مختلفة.</li>
+  </ul>
+</section>
 </body>
 </html>
